# question-answer-api-with-hugging-face-model

./: README.MD  docker-compose.yaml
api/: .gitignore  Dockerfile  demo_questions.json  pyproject.toml  save_model.py
api/app/: main.py
api/app/schema/: question.py
api/app/utils/: logger.py  question_answer.py
