[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Heitor R. Barros <heitorrbarros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]  
python = ">=3.11,<3.12"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
transformers = "^4.30.2"
tensorflow = "^2.12.0"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
